3.0 regression: playlist stops when inserting directory containing empty directories
Testcase
In the below /tmp/samples/a and /tmp/samples/b are empty.
/tmp/samples
├── a
├── b
└── sample_1.mp3
+/misc/video-samples% ./vlc-trunk -Irc
VLC media player 3.0.0-git Vetinari (revision 2.2.0-git-8819-gb3d26bf)
[0000000001e4de28] [cli] lua interface: Listening on host "*console".
VLC media player 3.0.0-git Vetinari
Command Line Interface initialized. Type `help' for help.
> add /tmp/samples
> status
( audio volume: 0.0 )
( state stopped )
> add /tmp/samples
> status
( audio volume: 0.0 )
( state stopped )
> add /tmp/samples
> status
( new input: file:///tmp/samples/sample_1.mp3 )
( audio volume: 269.0 )
( state playing )
>
As you see, the playlist does not start playing in the first to invocations of add /tmp/samples because of this bug, it however works correctly in the latest invocation.
Note
This is due to the preparser and the playlist racing to take care of an entity, and this bug was exposed after #17183 (closed) was fixed - they are related to each other but the causes are different.