playlist/item: do not stop playback on empty node

fixes: #17352

Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>